--- a/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity__catalogue.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity__catalogue.xml
@@ -6,76 +6,117 @@
     android:layout_height="match_parent"
     tools:context=".Catalogue">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="400dp"
-        android:layout_height="733dp"
+    <ImageView
+        android:id="@+id/Black"
+        android:layout_width="182dp"
+        android:layout_height="240dp"
+        android:layout_marginBottom="10dp"
+        android:alpha="100"
+        android:background="@android:drawable/screen_background_dark"
+        android:contentDescription="@string/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.454"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/WallImage"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.282" />
+
+    <TextView
+        android:id="@+id/width"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto"
+        android:text="@string/bredde_40_cm"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView23"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.279"
+        app:layout_constraintStart_toEndOf="@+id/WallImage"
+        app:layout_constraintTop_toBottomOf="@+id/Name"
+        app:layout_constraintVertical_bias="0.757" />
+
+    <TextView
+        android:id="@+id/textView23"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto"
+        android:text="@string/pris_4_700"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/Black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.325"
+        app:layout_constraintStart_toEndOf="@+id/WallImage"
+        app:layout_constraintTop_toBottomOf="@+id/Name"
+        app:layout_constraintVertical_bias="0.859" />
+
+    <TextView
+        android:id="@+id/Name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/roboto"
+        android:text="@string/_4_fag_m_4_glas"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/Black"
+        app:layout_constraintHorizontal_bias="0.609"
+        app:layout_constraintStart_toEndOf="@+id/WallImage"
+        app:layout_constraintTop_toTopOf="@+id/Black" />
+
+    <TextView
+        android:id="@+id/vejl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto"
+        android:text="@string/vejl_m_l"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/Highth"
+        app:layout_constraintEnd_toEndOf="@+id/Black"
+        app:layout_constraintHorizontal_bias="0.214"
+        app:layout_constraintStart_toEndOf="@+id/WallImage"
+        app:layout_constraintTop_toBottomOf="@+id/Name"
+        app:layout_constraintVertical_bias="0.838" />
+
+    <TextView
+        android:id="@+id/Highth"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto"
+        android:text="@string/h_jde_180_cm"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/width"
+        app:layout_constraintEnd_toEndOf="@+id/Black"
+        app:layout_constraintHorizontal_bias="0.282"
+        app:layout_constraintStart_toEndOf="@+id/WallImage"
+        app:layout_constraintTop_toBottomOf="@+id/Name"
+        app:layout_constraintVertical_bias="0.859" />
+
+    <ImageView
+        android:id="@+id/WallImage"
+        android:layout_width="232dp"
+        android:layout_height="240dp"
+        android:layout_marginBottom="10dp"
+        android:contentDescription="@string/app_name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/wallchoice2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/_47_dkr"
-                app:srcCompat="@drawable/catalougeimage" />
-
-            <ImageView
-                android:id="@+id/wallchoice3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/_47_dkr"
-                app:srcCompat="@drawable/catalougeimage" />
-
-            <ImageView
-                android:id="@+id/wallchoice4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/_47_dkr"
-                app:srcCompat="@drawable/catalougeimage" />
-
-            <ImageView
-                android:id="@+id/wallchoice5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/_47_dkr"
-                app:srcCompat="@drawable/catalougeimage" />
-
-            <ImageView
-                android:id="@+id/wallchoice6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/_47_dkr"
-                app:srcCompat="@drawable/catalougeimage" />
-
-            <ImageView
-                android:id="@+id/wallchoice7"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/_47_dkr"
-                app:srcCompat="@drawable/catalougeimage" />
-
-            <ImageView
-                android:id="@+id/wallchoice8"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/_47_dkr"
-                app:srcCompat="@drawable/catalougeimage" />
-
-            <ImageView
-                android:id="@+id/wallchoice9"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/_47_dkr"
-                app:srcCompat="@drawable/catalougeimage" />
-        </LinearLayout>
-    </androidx.recyclerview.widget.RecyclerView>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.282"
+        app:srcCompat="@drawable/a14" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
